# ai-garage

./: .gitignore  README.md
.github/workflows/: deploy.yml
114514track/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
114514track/src/app/: layout.tsx  manifest.ts  page.tsx
114514track/src/components/: ChartContainer.tsx  CoinDetailView.tsx  CommandPalette.tsx  CryptoTile.tsx  CurrencyToggle.tsx  (+2 more)
AInoMIMI/: .antigravityignore  .gitignore  README.md  gui.py  main.py  requirements.txt  run_gui.bat  summarize_json.py
AInoMIMI/docs/: future_roadmap.md
AInoMIMI/modules/: analyst.py  archiver.py  demucs_runner.py  exporter.py  pipeline.py  profiler.py  roformer_runner.py  summarizer.py  surgeon.py  utils.py
AInoMIMI/scripts/: verify_model_download.py
diag-struct-mcp/: Cargo.toml  DESIGN.md  README.md  SKILL.md
diag-struct-mcp/src/: main.rs
dynamic-universe/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
dynamic-universe/visualizers/: flowfield.js  meadow.js  universe.js
enko/: README.md  debug-japanese.ts  debug-unkasu.ts  package-lock.json  package.json  test-generator.ts
openclaw_setup_bat/: .gitignore  README.md  setup_openclaw_sandbox_template.bat
repo-topology-mcp/: Cargo.toml  DESIGN.md  README.md  SKILL.md
repo-topology-mcp/src/: main.rs
rust-analyz-mcp/: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
rust-analyz-mcp/src/: main.rs
type-sync-mcp/: Cargo.toml  DESIGN.md  README.md  SKILL.md
type-sync-mcp/src/: main.rs
(+27 files in other folders)
